precompiles/utils/macro/tests/precompile/discriminant/type-mismatch-2.stderr
error: All discriminants must have the same type (found u32 before)
  --> tests/precompile/discriminant/type-mismatch-2.rs:32:43
   |
32 |     fn discriminant(address: H160) -> Option<u64> {
   |                                              ^^^

warning: unused imports: `PrecompileHandle`, `PrecompileOutput`, `precompile_utils::EvmResult`, `sp_core::H160`
  --> tests/precompile/discriminant/type-mismatch-2.rs:16:2
   |
16 |     sp_core::H160,
   |     ^^^^^^^^^^^^^
17 |     fp_evm::{PrecompileHandle, PrecompileOutput},
   |              ^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^
18 |     precompile_utils::EvmResult,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default
